fixed logo aspect ratio on small screens

--- a/web/css/layout-classic.scss
+++ b/web/css/layout-classic.scss
@@ -76,7 +76,7 @@ body {
   background-image: url("../img/logo.png");
   @media screen and (max-width: 479px) {
     width: 300px;
-    height: 44px;
-    background-size: 300px 44px;
+    height: 24px;
+    background-size: 300px 24px;
   }
 }
